incorporated edits until T50 section

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1060,6 +1060,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\5434TVT6\\Carter et al. - Experimental warming across a tropical forest cano.pdf;C\:\\Users\\Me\\Zotero\\storage\\PZZ3AEVE\\pce.html}
 }
 
+@article{carterExperimentalWarmingTropical2021,
+  title = {Experimental Warming across a Tropical Forest Canopy Height Gradient Reveals Minimal Photosynthetic and Respiratory Acclimation},
+  author = {Carter, Kelsey R. and Wood, Tana E. and Reed, Sasha C. and Butts, Kaylie M. and Cavaleri, Molly A.},
+  date = {2021},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {n/a},
+  number = {n/a},
+  issn = {1365-3040},
+  doi = {10.1111/pce.14134},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.14134},
+  urldate = {2021-07-29},
+  abstract = {Tropical forest canopies cycle vast amounts of carbon, yet we still have a limited understanding of how these critical ecosystems will respond to climate warming. We implemented in situ leaf-level + 3°C experimental warming from the understory to the upper canopy of two Puerto Rican tropical tree species, Guarea guidonia and Ocotea sintenisii. After approximately 1 month of continuous warming, we assessed adjustments in photosynthesis, chlorophyll fluorescence, stomatal conductance, leaf traits and foliar respiration. Warming did not alter net photosynthetic temperature response for either species; however, the optimum temperature of Ocotea understory leaf photosynthetic electron transport shifted upward. There was no Ocotea respiratory treatment effect, while Guarea respiratory temperature sensitivity (Q10) was down-regulated in heated leaves. The optimum temperatures for photosynthesis (Topt) decreased 3–5°C from understory to the highest canopy position, perhaps due to upper canopy stomatal conductance limitations. Guarea upper canopy Topt was similar to the mean daytime temperatures, while Ocotea canopy leaves often operated above Topt. With minimal acclimation to warmer temperatures in the upper canopy, further warming could put these forests at risk of reduced CO2 uptake, which could weaken the overall carbon sink strength of this tropical forest.},
+  langid = {english},
+  keywords = {electron transport,experimental leaf warming,photosynthesis,respiration,stomatal conductance,thermal acclimation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.14134},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\CILEVLPC\\Carter et al. - Experimental warming across a tropical forest cano.pdf;C\:\\Users\\Me\\Zotero\\storage\\FINJQECI\\pce.html}
+}
+
 @article{carterWithinCanopyExperimentalLeaf2018a,
   title = {Within-{{Canopy Experimental Leaf Warming Induces Photosynthetic Decline Instead}} of {{Acclimation}} in {{Two Northern Hardwood Species}}},
   author = {Carter, Kelsey R. and Cavaleri, Molly A.},
@@ -3545,6 +3563,13 @@
   keywords = {Acclimation,Distribution range,Geographical variation,Habitat fragmentation,Leaf functional trait,Local adaptation}
 }
 
+@online{IsopreneEmissionPlantsa,
+  title = {Isoprene {{Emission}} from {{Plants}}: {{Why}} and {{How}} | {{Annals}} of {{Botany}} | {{Oxford Academic}}},
+  url = {https://academic-oup-com.smithsonian.idm.oclc.org/aob/article/101/1/5/91716},
+  urldate = {2021-07-29},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\4CAFHSYJ\\91716.html}
+}
+
 @book{jarvisSingleStomaSingle,
   title = {A. {{The Single Stoma}}. {{B}}. {{The Single Leaf}}.},
   author = {Jarvis, P. G. and Mcnaughton, K. G. and The, C. and Plant, Individual},
@@ -5676,6 +5701,19 @@
   keywords = {abiotic,hot,model,ozone,photosynthesis,stress,terpene,thermotolerance},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.12787},
   file = {C\:\\Users\\Me\\Zotero\\storage\\F8XG5I63\\Monson et al. - 2016 - Interactions between temperature and intercellular.pdf}
+}
+
+@article{monsonLeafIsopreneEmission2021,
+  title = {Leaf Isoprene Emission as a Trait That Mediates the Growth-Defense Tradeoff in the Face of Climate Stress},
+  author = {Monson, Russell K. and Weraduwage, Sarathi M. and Rosenkranz, Maaria and Schnitzler, Jörg-Peter and Sharkey, Thomas D.},
+  date = {2021-01-08},
+  journaltitle = {Oecologia},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-020-04813-7},
+  url = {https://doi.org/10.1007/s00442-020-04813-7},
+  urldate = {2021-07-29},
+  abstract = {Plant isoprene emissions are known to contribute to abiotic stress tolerance, especially during episodes of high temperature and drought, and during cellular oxidative stress. Recent studies have shown that genetic transformations to add or remove isoprene emissions cause a cascade of cellular modifications that include known signaling pathways, and interact to remodel adaptive growth-defense tradeoffs. The most compelling evidence for isoprene signaling is found in the shikimate and phenylpropanoid pathways, which produce salicylic acid, alkaloids, tannins, anthocyanins, flavonols and other flavonoids; all of which have roles in stress tolerance and plant defense. Isoprene also influences key gene expression patterns in the terpenoid biosynthetic pathways, and the jasmonic acid, gibberellic acid and cytokinin signaling networks that have important roles in controlling inducible defense responses and influencing plant growth and development, particularly following defoliation. In this synthesis paper, using past studies of transgenic poplar, tobacco and Arabidopsis, we present the evidence for isoprene acting as a metabolite that coordinates aspects of cellular signaling, resulting in enhanced chemical defense during periods of climate stress, while minimizing costs to growth. This perspective represents a major shift in our thinking away from direct effects of isoprene, for example, by changing membrane properties or quenching ROS, to indirect effects, through changes in gene expression and protein abundances. Recognition of isoprene's role in the growth-defense tradeoff provides new perspectives on evolution of the trait, its contribution to plant adaptation and resilience, and the ecological niches in which it is most effective.},
+  langid = {english}
 }
 
 @article{montejo-kovacevichMicroclimateBufferingThermal2019,
@@ -8241,6 +8279,40 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\BR5R36DN\\Sharkey and Monson - 2014 - The future of isoprene emission from leaves, canop.pdf;C\:\\Users\\Me\\Zotero\\storage\\LX3QBAJ7\\pce.html}
 }
 
+@article{sharkeyIsopreneEmissionPlants2007,
+  title = {Isoprene {{Emission}} from {{Plants}}: {{Why}} and {{How}}},
+  shorttitle = {Isoprene {{Emission}} from {{Plants}}},
+  author = {Sharkey, T. D. and Wiberley, A. E. and Donohue, A. R.},
+  date = {2007-10-17},
+  journaltitle = {Annals of Botany},
+  volume = {101},
+  number = {1},
+  pages = {5--18},
+  issn = {0305-7364, 1095-8290},
+  doi = {10.1093/aob/mcm240},
+  url = {https://academic.oup.com/aob/article-lookup/doi/10.1093/aob/mcm240},
+  urldate = {2021-07-29},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GNFE57DV\\Sharkey et al. - 2007 - Isoprene Emission from Plants Why and How.pdf}
+}
+
+@article{sharkeyIsopreneEmissionPlants2008,
+  title = {Isoprene {{Emission}} from {{Plants}}: {{Why}} and {{How}}},
+  shorttitle = {Isoprene {{Emission}} from {{Plants}}},
+  author = {Sharkey, Thomas D. and Wiberley, Amy E. and Donohue, Autumn R.},
+  date = {2008-01-01},
+  journaltitle = {Annals of Botany},
+  volume = {101},
+  number = {1},
+  pages = {5--18},
+  issn = {0305-7364},
+  doi = {10.1093/aob/mcm240},
+  url = {https://doi.org/10.1093/aob/mcm240},
+  urldate = {2021-07-29},
+  abstract = {Some, but not all, plants emit isoprene. Emission of the related monoterpenes is more universal among plants, but the amount of isoprene emitted from plants dominates the biosphere–atmosphere hydrocarbon exchange.The emission of isoprene from plants affects atmospheric chemistry. Isoprene reacts very rapidly with hydroxyl radicals in the atmosphere making hydroperoxides that can enhance ozone formation. Aerosol formation in the atmosphere may also be influenced by biogenic isoprene. Plants that emit isoprene are better able to tolerate sunlight-induced rapid heating of leaves (heat flecks). They also tolerate ozone and other reactive oxygen species better than non-emitting plants. Expression of the isoprene synthase gene can account for control of isoprene emission capacity as leaves expand. The emission capacity of fully expanded leaves varies through the season but the biochemical control of capacity of mature leaves appears to be at several different points in isoprene metabolism.The capacity for isoprene emission evolved many times in plants, probably as a mechanism for coping with heat flecks. It also confers tolerance of reactive oxygen species. It is an example of isoprenoids enhancing membrane function, although the mechanism is likely to be different from that of sterols. Understanding the regulation of isoprene emission is advancing rapidly now that the pathway that provides the substrate is known.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\L7DAIMPF\\Sharkey et al. - 2008 - Isoprene Emission from Plants Why and How.pdf}
+}
+
 @article{silvaResponseOldgrowthTropical2013,
   title = {Response of an Old-Growth Tropical Rainforest to Transient High Temperature and Drought},
   author = {Silva, Carlos E. and Kellner, James R. and Clark, David B. and Clark, Deborah A.},
@@ -8974,6 +9046,25 @@
   abstract = {Experimental research shows that isoprene emission by plants can improve photosynthetic performance at high temperatures. But whether species that emit isoprene have higher thermal limits than non‐emitting species remains largely untested. Tropical plants are adapted to narrow temperature ranges and global warming could result in significant ecosystem restructuring due to small variations in species' thermal tolerances. We compared photosynthetic temperature responses of 26 co‐occurring tropical tree and liana species to test whether isoprene‐emitting species are more tolerant to high temperatures. We classified species as isoprene emitters versus non‐emitters based on published datasets. Maximum temperatures for net photosynthesis were \textasciitilde 1.8°C higher for isoprene‐emitting species than for non‐emitters, and thermal response curves were 24\% wider; differences in optimum temperatures (Topt) or photosynthetic rates at Topt were not significant. Modelling the carbon cost of isoprene emission, we show that even strong emission rates cause little reduction in the net carbon assimilation advantage over non‐emitters at supraoptimal temperatures. Isoprene emissions may alleviate biochemical limitations, which together with stomatal conductance, co‐limit photosynthesis above Topt. Our findings provide evidence that isoprene emission may be an adaptation to warmer thermal niches, and that emitting species may fare better under global warming than co‐occurring non‐emitting species.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\YQWJ26TV\\Tyeen. C. Taylor et al. 2019.pdf}
+}
+
+@article{taylorCapacityEmitIsoprene2019b,
+  title = {The Capacity to Emit Isoprene Differentiates the Photosynthetic Temperature Responses of Tropical Plant Species},
+  author = {Taylor, Tyeen C. and Smith, Marielle N. and Slot, Martijn and Feeley, Kenneth J.},
+  date = {2019},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {42},
+  number = {8},
+  pages = {2448--2457},
+  issn = {1365-3040},
+  doi = {10.1111/pce.13564},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.13564},
+  urldate = {2021-07-29},
+  abstract = {Experimental research shows that isoprene emission by plants can improve photosynthetic performance at high temperatures. But whether species that emit isoprene have higher thermal limits than non-emitting species remains largely untested. Tropical plants are adapted to narrow temperature ranges and global warming could result in significant ecosystem restructuring due to small variations in species' thermal tolerances. We compared photosynthetic temperature responses of 26 co-occurring tropical tree and liana species to test whether isoprene-emitting species are more tolerant to high temperatures. We classified species as isoprene emitters versus non-emitters based on published datasets. Maximum temperatures for net photosynthesis were 1.8°C higher for isoprene-emitting species than for non-emitters, and thermal response curves were 24\% wider; differences in optimum temperatures (Topt) or photosynthetic rates at Topt were not significant. Modelling the carbon cost of isoprene emission, we show that even strong emission rates cause little reduction in the net carbon assimilation advantage over non-emitters at supraoptimal temperatures. Isoprene emissions may alleviate biochemical limitations, which together with stomatal conductance, co-limit photosynthesis above Topt. Our findings provide evidence that isoprene emission may be an adaptation to warmer thermal niches, and that emitting species may fare better under global warming than co-occurring non-emitting species.},
+  langid = {english},
+  keywords = {climate change,global warming,isoprene emission,leaf biochemistry,photosynthetic temperature response,plant functional traits,thermal tolerance,tropical forest},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.13564},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\A729VXJP\\Taylor et al. - 2019 - The capacity to emit isoprene differentiates the p.pdf;C\:\\Users\\Me\\Zotero\\storage\\QSF6DIXL\\pce.html}
 }
 
 @article{taylorNewFieldInstrument2021,
