--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -107,7 +107,7 @@ These changes are expected to have profound effects on tree metabolism and fores
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
 Overstory trees form canopies that play a crucial role in moderating forest climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including understory microclimates by buffering extreme temperatures, solar insolation, wind, and other meteorological conditions [@zellweger_seasonal_2019]. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and CO~2~ concentrations that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
-This vertical gradient shapes nearly every aspect of plant metabolism, demography, and ecology; however, we lack comprehensive understanding of these gradients [but see @niinemetsPhotosyntheticAcclimationSimultaneous2004b].
+Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsPhotosyntheticAcclimationSimultaneous2004b].
 Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecosystem dynamics, biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
 
 
@@ -250,7 +250,7 @@ nocite: |
 
 #### (Anatomical, Morphological and Physiological traits)
 
-Sun leaves have traits that reduce heat and water stress -- for instance, by being smaller, hairier, having higher vein density [Table 1, @leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and a steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but they are more likely to overheat than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves have traits that reduce heat and water stress -- for instance, by being smaller, hairier, having higher vein density [Table 1, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and a steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but they are more likely to overheat than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### (Biochemical and elemental traits, and isoprenes)
 
@@ -295,7 +295,7 @@ nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConduc
 
 ### Stomatal conductance
 
-Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in sub-canopy or understory leaves (Table 2). However, because of the high VPD and irradiance experienced by sun leaves,  midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. In open forests, midday stomatal closure can occur in both upper canopy and lower canopy leaves, with stomata of lower canopy leaves remaining closed for a longer duration than upper canopy leaves resulting in higher $T_{leaf}$, perhaps due to higher RH [Fig. `r fig_leaf_T`,@zweifelMiddayStomatalClosure2002]. The temperature at which $g_s$ is maximized, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], sun leaves in the upper canopy show a stronger decrease in $g_s$ to rising $T_{air}$ than shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
+Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in sub-canopy or understory leaves (Table 2). However, because of the high VPD and irradiance experienced by sun leaves,  midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. In open forests, midday stomatal closure can occur in both upper canopy and lower canopy leaves, with stomata of lower canopy leaves remaining closed for a longer duration than upper canopy leaves, resulting in elevated lower canopy $T_{leaf}$, perhaps due to higher RH [Fig. `r fig_leaf_T`,@zweifelMiddayStomatalClosure2002]. The temperature at which $g_s$ is maximized, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
 
 ### Photosynthesis
 
