--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -351,7 +351,7 @@ Despite the potential for shorter trees in open forests to experience greater en
 
 There are, however, exceptions to the pattern of greater growth reductions under high $T_{air}$ among larger trees.
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2021].
-Potential mechanisms for these patterns include stifling of understory ??E under still, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. 3) and lower photosynthesis, increases nighttime respiratory carbon loss that disroportionately reduced carbon availability for growth among small trees accelerated asymmetric competition. Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions. 
+Potential mechanisms for these patterns include stifling of understory $\lambda E$ under still, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. 3) and lower photosynthesis, increases nighttime respiratory carbon loss that disroportionately reduced carbon availability for growth among small trees accelerated asymmetric competition. Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions. 
 
 ![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
 
